[package]
name = "fuzzor-docker"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

fuzzor = { path = "../fuzzor" }
fuzzor_infra = { path = "../infra/types", package = "types", version = "0.1.0"}

tokio = { version = "1.37", features = ["full"] }
futures-util = "0.3.30"
async-trait = "0.1.80"

bollard = { version = "0.16.0", features = ["buildkit"] }
tar = "0.4.40"

log = "0.4.21"
env_logger = "0.11.3"

serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.117"
