[package]
name = "fuzzor-github"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fuzzor = { path = "../fuzzor" }

log = "0.4.21"
octocrab = "0.38.0"
async-trait = "0.1.80"
tokio = { version = "1.37", features = ["full"] }
