[package]
name = "fuzzor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.0"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8.1", features = ["base64"] }
serde_yaml = "0.9.32"
sha1 = "0.10.6"
tar = "0.4.40"
tokio = { version = "1.37", features = ["full"] }

fuzzor_infra = { path = "../infra/types", package = "types", version = "0.1.0"}
git2 = "0.18.3"
async-trait = "0.1.80"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
