[package]
name = "coverage-reporter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[profile.release]
strip = "symbols"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.32"
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5.4", features = ["derive", "string"] }
fuzzor_infra = { path = "../types", package = "types", version = "0.1.0"}
cpp_demangle = "0.5.1"

[[bin]]
name = "coverage-reporter"
path = "src/main.rs"
