[package]
name = "reproducer"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]

clap = { version = "4.5.4", features = ["derive", "string"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
serde_with = { version = "3.8.1", features = ["base64"] }
tokio = { version = "1.37", features = ["full"] }

fuzzor_infra = { path = "../types", package = "types", version = "0.1.0"}
regex = "1.11.1"

[[bin]]
name = "reproducer"
path = "src/main.rs"
